{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 253,
  "lineage": "7db64f0e-1b53-5cea-db25-0594b9ee3c0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:security-group/sg-0a9851338565c0d4c",
            "description": "Allow traffic to ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9851338565c0d4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "medusa-ecs-sg",
            "name_prefix": "",
            "owner_id": "414508482017",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medusa-ecs-sg"
            },
            "tags_all": {
              "Name": "medusa-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024fa065a5f68fb23",
            "arn": "arn:aws:ec2:ap-south-2:414508482017:elastic-ip/eipalloc-024fa065a5f68fb23",
            "domain": "vpc",
            "id": "eipalloc-024fa065a5f68fb23",
            "network_border_group": "ap-south-2",
            "public_dns": "ec2-18-61-223-228.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.223.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:internet-gateway/igw-03b4c477029fe2a1e",
            "id": "igw-03b4c477029fe2a1e",
            "owner_id": "414508482017",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024fa065a5f68fb23",
            "association_id": "eipassoc-0ea8363bd15156b62",
            "connectivity_type": "public",
            "id": "nat-00ab719c45a532acb",
            "network_interface_id": "eni-0203a2cd065c97e2d",
            "private_ip": "10.0.1.149",
            "public_ip": "18.61.223.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0061b1f6afe6f9a79",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ebd37c16a6483391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ab719c45a532acb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ebd37c16a648339",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b4c477029fe2a1e",
            "id": "r-rtb-0112f26b3628c85441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0112f26b3628c8544",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:route-table/rtb-09ebd37c16a648339",
            "id": "rtb-09ebd37c16a648339",
            "owner_id": "414508482017",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:route-table/rtb-0112f26b3628c8544",
            "id": "rtb-0112f26b3628c8544",
            "owner_id": "414508482017",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034866fb5404c5599",
            "route_table_id": "rtb-09ebd37c16a648339",
            "subnet_id": "subnet-074fb4b8796daa6d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6c4d02c41a2c21",
            "route_table_id": "rtb-09ebd37c16a648339",
            "subnet_id": "subnet-0db124ab32dd33388"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb10f588a0c6bc1a",
            "route_table_id": "rtb-09ebd37c16a648339",
            "subnet_id": "subnet-00e7dd6585b2c2cf1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02372ff3e03d66d75",
            "route_table_id": "rtb-0112f26b3628c8544",
            "subnet_id": "subnet-0061b1f6afe6f9a79"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddf406f63028ee82",
            "route_table_id": "rtb-0112f26b3628c8544",
            "subnet_id": "subnet-0e41791e9e7a9a84a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076c5e3fb88e25be3",
            "route_table_id": "rtb-0112f26b3628c8544",
            "subnet_id": "subnet-03a5ed7ace9eb13f2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:subnet/subnet-074fb4b8796daa6d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074fb4b8796daa6d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414508482017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:subnet/subnet-0db124ab32dd33388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db124ab32dd33388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414508482017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:subnet/subnet-00e7dd6585b2c2cf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2c",
            "availability_zone_id": "aps2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e7dd6585b2c2cf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414508482017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:subnet/subnet-0061b1f6afe6f9a79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0061b1f6afe6f9a79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414508482017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:subnet/subnet-0e41791e9e7a9a84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e41791e9e7a9a84a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414508482017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:subnet/subnet-03a5ed7ace9eb13f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2c",
            "availability_zone_id": "aps2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a5ed7ace9eb13f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414508482017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            },
            "vpc_id": "vpc-078382009986b6aa3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:414508482017:vpc/vpc-078382009986b6aa3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076b1fac46e885ad7",
            "default_route_table_id": "rtb-036a1d93eed0ead4c",
            "default_security_group_id": "sg-06095ce164dc1e0ce",
            "dhcp_options_id": "dopt-04b27a12ceece18a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078382009986b6aa3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036a1d93eed0ead4c",
            "owner_id": "414508482017",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            }
          }
        }
      ]
    }
  ]
}